Fixes page width/ horizontal scrolling issue on larger screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -450,6 +450,10 @@ img {
     display: grid;
     grid-template-columns: 50px 1fr;
   }
+
+  .main-container {
+    width: 100%;
+  }
 }
 @media (min-width: 1024px) {
   body {
